[package]
name = "json5_rustler_backend"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "json5_rustler_backend"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
bigdecimal = { version = "0.4.3", features = ["serde"] }
json5 = "0.4.1"
num-bigint = { version = "0.4.5", features = ["serde"] }
rustler = {version = "0.33.0", features = ["big_integer", "serde"]}
serde = { version = "1.0.203", features = ["derive"] }
